# avgfosshelper

./: .gitignore  CMakeLists.txt  README.md  build.sh  dependencies.md  dtw.c  dtw.h  funcs.c  funcs.h  main.c  sha256.txt  teste.c  teste.py
